tmux: binding to quickly open personal keymap

--- a/tmux.local.conf
+++ b/tmux.local.conf
@@ -35,3 +35,4 @@ bind M-b neww -n bspwmrc  'nvim ~/.config/bspwm/bspwmrc'
 bind M-d neww -n dunstrc  'nvim ~/.config/dunst/dunstrc'
 bind M-x neww -n xinitrc  'nvim ~/.xinitrc'
 bind M-z neww -n zshrc    'nvim ~/.zshrc.local'
+bind M-C-k neww -n zshrc  'nvim ~/dev/personal/qmk-keymap/keyboards/preonic/keymaps/fluffywaffles/keymap.c'
