fontconfig: support color emoji in monospace preferneces

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -6,6 +6,8 @@
     <prefer>
       <family>mononoki</family>
       <family>Fira Code</family>
+      <!-- try emoji fonts before falling back to unifont -->
+      <family>emoji</family>
       <family>Unifont</family>
     </prefer>
   </alias>
