fontconfig: better emoji fallback handling

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -1,14 +1,43 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+  <!-- Prefer mononoki and Fira Code as monospace fonts -->
   <alias>
     <family>monospace</family>
     <prefer>
       <family>mononoki</family>
       <family>Fira Code</family>
-      <!-- try emoji fonts before falling back to unifont -->
-      <family>emoji</family>
-      <family>Unifont</family>
     </prefer>
   </alias>
+  <!-- If a font contains 🌽 then it's gotta be made into color emoji -->
+  <!-- Note that this applies regardless of family, so yes monospace -->
+  <match target='pattern'>
+    <test name='charset' compare='contains'>
+      <charset><int>0x1f33d</int></charset>
+    </test>
+    <edit name='family' mode='prepend' binding='strong'>
+      <string>Noto Color Emoji</string>
+    </edit>
+  </match>
+  <!-- If a monospace font wants ᐅ prefer Fira and Unifont over all  -->
+  <match target='pattern'>
+    <test name='family' compare='eq'><string>monospace</string></test>
+    <test name='charset' compare='contains'>
+      <charset><int>0x1405</int></charset>
+    </test>
+    <edit name='family' mode='prepend' binding='strong'>
+      <string>Fira Code</string>
+      <string>Unifont</string>
+    </edit>
+  </match>
+  <!-- If a monospace font wants ᐅ prefer Fira and Unifont over all  -->
+  <match target='pattern'>
+    <test name='family' compare='eq'><string>monospace</string></test>
+    <test name='charset' compare='contains'>
+      <charset><int>0x2192</int></charset>
+    </test>
+    <edit name='family' mode='prepend' binding='strong'>
+      <string>Fira Code</string>
+    </edit>
+  </match>
 </fontconfig>
