fontconfig: fix those emoji exhaustively and once and for all

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -21,18 +21,15 @@
   </match>
   <!-- If a monospace font wants ᐅ prefer Fira and Unifont over all  -->
   <match target='pattern'>
-    <test name='family' compare='eq'><string>monospace</string></test>
     <test name='charset' compare='contains'>
       <charset><int>0x1405</int></charset>
     </test>
     <edit name='family' mode='prepend' binding='strong'>
       <string>Fira Code</string>
-      <string>Unifont</string>
     </edit>
   </match>
-  <!-- If a monospace font wants ᐅ prefer Fira and Unifont over all  -->
+  <!-- If a monospace font wants → prefer Fira and Unifont over all  -->
   <match target='pattern'>
-    <test name='family' compare='eq'><string>monospace</string></test>
     <test name='charset' compare='contains'>
       <charset><int>0x2192</int></charset>
     </test>
@@ -40,4 +37,5 @@
       <string>Fira Code</string>
     </edit>
   </match>
+  <include prefix='xdg'>fontconfig/emoji.conf</include>
 </fontconfig>
