fontconfig: add Noto Color Emoji to the serif font family

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -9,13 +9,12 @@
       <family>Fira Code</family>
     </prefer>
   </alias>
-  <!-- If a font contains 🌽 then it's gotta be made into color emoji -->
-  <!-- Note that this applies regardless of family, so yes monospace -->
+  <!-- Include Noto Color Emoji as part of serif generic family -->
   <match target='pattern'>
-    <test name='charset' compare='contains'>
-      <charset><int>0x1f33d</int></charset>
+    <test name='family' compare='contains'>
+      <string>serif</string>
     </test>
-    <edit name='family' mode='prepend' binding='strong'>
+    <edit name='family' mode='append'>
       <string>Noto Color Emoji</string>
     </edit>
   </match>
