--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -18,16 +18,17 @@
       <string>Noto Color Emoji</string>
     </edit>
   </match>
-  <!-- If a monospace font wants ᐅ prefer Fira and Unifont over all  -->
+  <!-- If a monospace font wants ᐅ prefer Fira Code and Unifont over all -->
   <match target='pattern'>
     <test name='charset' compare='contains'>
       <charset><int>0x1405</int></charset>
     </test>
     <edit name='family' mode='prepend' binding='strong'>
       <string>Fira Code</string>
+      <string>Unifont</string>
     </edit>
   </match>
-  <!-- If a monospace font wants → prefer Fira and Unifont over all  -->
+  <!-- If a monospace font wants → prefer Fira Code -->
   <match target='pattern'>
     <test name='charset' compare='contains'>
       <charset><int>0x2192</int></charset>
