fontconfig: emoji: don't make symbols into ugly orange emoji, yeesh

--- a/config/fontconfig/emoji.conf
+++ b/config/fontconfig/emoji.conf
@@ -26935,7 +26935,12 @@
       <charset><int>0x25B6</int></charset>
     </test>
     <edit name='family' mode='prepend_first' binding='strong'>
-      <string>Noto Color Emoji</string>
+      <!--
+        This is "black right-pointing triangle," which is a symbol, not an
+        emoji... but Noto Color Emoji provides it, and for some reason
+        the glyph is an ugly shaded orange box with a white arrow on it.
+      -->
+      <!--<string>Noto Color Emoji</string>-->
     </edit>
   </match>
   <match target='pattern'>
@@ -26967,7 +26972,12 @@
       <charset><int>0x25C0</int></charset>
     </test>
     <edit name='family' mode='prepend_first' binding='strong'>
-      <string>Noto Color Emoji</string>
+      <!--
+        This is "black left-pointing triangle," which is a symbol, not an
+        emoji... but Noto Color Emoji provides it, and for some reason
+        the glyph is an ugly shaded orange box with a white arrow on it.
+      -->
+      <!--<string>Noto Color Emoji</string>-->
     </edit>
   </match>
   <match target='pattern'>
