fontconfig: append Source Code Pro to preferred monospace font families

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -7,6 +7,7 @@
     <prefer>
       <family>mononoki</family>
       <family>Fira Code</family>
+      <family>Source Code Pro</family>
     </prefer>
   </alias>
   <!-- Include Noto Color Emoji as part of serif generic family -->
@@ -18,14 +19,13 @@
       <string>Noto Color Emoji</string>
     </edit>
   </match>
-  <!-- If a monospace font wants ᐅ prefer Fira Code and Unifont over all -->
+  <!-- If a monospace font wants ᐅ prefer Fira Code or Source Code Pro -->
   <match target='pattern'>
     <test name='charset' compare='contains'>
       <charset><int>0x1405</int></charset>
     </test>
     <edit name='family' mode='prepend' binding='strong'>
       <string>Fira Code</string>
-      <string>Unifont</string>
     </edit>
   </match>
   <!-- If a monospace font wants → prefer Fira Code -->
