tmux: minor: simplify status-{left,right} settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,8 +59,10 @@ set -g status-bg '#43d08a' # color comes from rakr/two-firewatch
 set -g status-fg '#eeeeee' # white, or basically white anyway
 set -g status-justify right
 set -g status-position bottom
-set -g status-left ' '  # don't print session_name
-set -g status-right ' ' # don't print "pane_title" {date} {time}
+set -g status-left ''  # don't print session_name
+set -g status-right '' # don't print "pane_title" {date} {time}
+set -g status-left-length 0  # hide left status entirely
+set -g status-right-length 0 # hide right status entirely
 
 # Less general-purpose settings should go here. -q means 'fail quietly'.
 source -q .tmux.local.conf
